@@ -51,33 +51,53 @@
 
     <THEAD>
 		<TR>
-			<TD>
-				<IMG src="img/money.gif" alt="">
-			</TD>
-			<TD class="bold">
-				{trans("Type")}/{trans("Tariff")}:
-			</TD>
-			<TD>
-				<input type="hidden" value="" name="assignment[tarifftype]" id="tarifftype">
-				<select id="tariff_select" size="1" name="assignment[tariffid]" {tip text="Select liability type" trigger="tariffid"}>
-					<option value=""   data-tarifftype="0" {if !$assignment.tariffid} selected{/if}>- {trans("tariffless liability")} -</option>
-					<option value="-1" data-tarifftype="0" {if $assignment.tariffid == -1} selected{/if}>{trans("- all liabilities suspended -")}</option>
+			<TD colspan="3">
+				<table>
+					<tr>
+						<td>
+							<IMG src="img/money.gif" alt="">
+						</TD>
+						<TD class="bold">
+							{trans("Type")}/{trans("Tariff")}:
+						</TD>
+						<td>
+							<input type="hidden" value="" name="assignment[tarifftype]" id="tarifftype">
+							<select id="tariff_select" size="1" name="assignment[tariffid]" {tip text="Select liability type" trigger="tariffid"}>
+								<option value=""   data-tarifftype="0" {if !$assignment.tariffid} selected{/if}>- {trans("tariffless liability")} -</option>
+								<option value="-1" data-tarifftype="0" {if $assignment.tariffid == -1} selected{/if}>{trans("- all liabilities suspended -")}</option>
 
-					{if $promotionschemas}
-						<option value="-2" data-tarifftype="0" {if $assignment.tariffid == -2} selected{/if}>- {trans("per promotion schema")} -</option>
-					{/if}
+								{if $promotionschemas}
+									<option value="-2" data-tarifftype="0" {if $assignment.tariffid == -2} selected{/if}>- {trans("per promotion schema")} -</option>
+								{/if}
 
-					{foreach $tariffs as $tariff}
-						<option value="{$tariff.id}" data-tarifftype="{$tariff.tarifftype}" {if $tariff.id==$assignment.tariffid} selected{/if} data-valid="{$tariff.valid}"{if !$tariff.valid} class="blend"{if !$assignment.alltariffs} style="display: none;"{/if}{/if}>
-						{$tariff.name} ({if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}{$tariff.value|money_format}{/if}{if $tariff.upceil || $tariff.downceil}, {$tariff.downceil}/{$tariff.upceil} kbit/s{/if})
-						</option>
-					{/foreach}
-				</select>
-				<label>
-					<input type="checkbox" name="assignment[alltariffs]" {tip text="Check if all tariffs should be displayed" trigger="alltariffs"}{if $assignment.alltariffs} checked{/if}>
-					{trans("show all tariffs")}
-				</label>
-			</TD>
+								{foreach $tariffs as $tariff}
+									<option value="{$tariff.id}" data-tarifftype="{$tariff.tarifftype}" data-tarifftags="{$tariff.tags}" {if $tariff.id==$assignment.tariffid} selected{/if} data-valid="{$tariff.valid}"{if !$tariff.valid} class="blend"{if !$assignment.alltariffs} style="display: none;"{/if}{/if}>
+									{$tariff.name} ({if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}{$tariff.value|money_format}{/if}{if $tariff.upceil || $tariff.downceil}, {$tariff.downceil}/{$tariff.upceil} kbit/s{/if})
+									</option>
+								{/foreach}
+							</select>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="2">
+						</td>
+						<td>
+							<div style="float: left; padding-right: 5px;">
+								<label>
+									<input type="checkbox" name="assignment[alltariffs]" {tip text="Check if all tariffs should be displayed" trigger="alltariffs"}{if $assignment.alltariffs} checked{/if}>
+									{trans("show all tariffs")}
+								</label>
+								&nbsp;&nbsp;{trans("Tags:")}
+							</div>
+							<SELECT size="5" id="assignment-tags" name="assignment[tags][]" class="lms-ui-multiselect" {tip text="Select tariff tags"} multiple onchange="javascript:update_tariffs();">
+								{foreach $tags as $tag}
+								<OPTION value="{$tag.id}">{$tag.name}</OPTION>
+								{/foreach}
+							</SELECT>
+						</td>
+					</tr>
+				</table>
+			</td>
 		</TR>
     </THEAD>
 
@@ -475,17 +495,9 @@
 <!--
 	$(function() {
 		$('[name="assignment[alltariffs]"]').click(function() {
-			var checked = this.checked;
+			update_tariffs();
 
-			var tariffselect = $('select', $(this).closest('td'));
-			$('option', tariffselect).each(function() {
-				if ($(this).attr('data-valid') == '0') {
-					$(this).css('display', checked ? '' : 'none');
-				}
-			});
-			if (!checked && $('option[data-valid="0"]', tariffselect).filter(':selected').val() == tariffselect.val()) {
-				tariffselect.val($('option:nth(0)').val());
-			}
+			var checked = this.checked;
 
 			var promoselect = $('#promotionselect');
 			$('optgroup', promoselect).each(function() {
@@ -500,11 +512,11 @@
 		});
 	});
 
-    $( '#tariff_select' ).change( function() {
-    	var tarifftype = $(this).find(':selected').attr('data-tarifftype');
-    	var val = $(this).val();
-    	
-    	$('#tarifftype').val( tarifftype );
+	$( '#tariff_select' ).change( function() {
+		var tarifftype = $(this).find(':selected').attr('data-tarifftype');
+		var val = $(this).val();
+
+		$('#tarifftype').val( tarifftype );
 
 		{if $promotionschemas}
 		document.getElementById('a_schema').style.display       = val == -2 ? '' : 'none';
@@ -568,6 +580,55 @@
 	
 	$( '#promotionselect' ).trigger('change');
 	$( '#tariff_select'   ).trigger('change');
+
+	function update_tariffs() {
+		var valid_checked = $('[name="assignment[alltariffs]"]').is(':checked');
+		var tariff_select = $('#tariff_select');
+
+		var tags = [];
+		$('[name="assignment[tags][]"]:checked').each(function() {
+			tags.push(parseInt($(this).val()));
+		});
+
+		$('option', tariff_select).each(function() {
+			var option = $(this);
+
+			if (option.val() <= 0) {
+				return;
+			}
+
+			if (tags.length) {
+				option.css('display', 'none');
+
+				var tarifftags = option.attr('data-tarifftags');
+				if (typeof(tarifftags) === 'undefined' || !tarifftags.length) {
+					return;
+				}
+
+				tarifftags = JSON.parse('[' +  tarifftags + ']');
+
+				$.each(tarifftags, function(key, value) {
+					if (tags.indexOf(value) > -1) {
+						if (option.attr('data-valid') == '0') {
+							option.css('display', valid_checked ? '' : 'none');
+						} else {
+							option.css('display', '');
+						}
+					}
+				});
+			} else {
+				if (option.attr('data-valid') == '0') {
+					option.css('display', valid_checked ? '' : 'none');
+				} else {
+					option.css('display', '');
+				}
+			}
+		});
+
+		if ($('option:selected', tariff_select).css('display') == 'none') {
+			tariff_select.val($('option:nth(0)').val());
+		}
+	}
 //-->
 </SCRIPT>
 {/block}
